@@ -1,7 +1,7 @@
 package com.backendfunction.post.dto;
 
 import com.backendfunction.commet.dto.CommentDto;
-import com.backendfunction.post.constant.Category;
+import com.backendfunction.global.image.entity.Image;
 import com.backendfunction.post.entity.Post;
 import lombok.AllArgsConstructor;
 import lombok.Data;
@@ -9,6 +9,7 @@ import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
@@ -17,9 +18,26 @@ public class PostDto {
     private Long id;
     private String content;
     private String title;
-    private String price;
-    private Category category;
+    private int price;
     private List<CommentDto> commentDtos = new ArrayList<>();
+    private List<String> imgs;
+
+
+//    public PostDto(Post post) {
+//        this.id = post.getId();
+//    }
+public PostDto(Post post) {
+    this.id = post.getId();
+    this.content = post.getContent();
+    this.title = post.getTitle();
+    this.price = post.getPrice();
+    this.commentDtos = post.getCommentList().stream()
+            .map(CommentDto::fromEntity)
+            .collect(Collectors.toList());
+    this.imgs = post.getImages().stream()
+            .map(Image::getImage)
+            .collect(Collectors.toList());
+}
 
     public static PostDto fromEntity(Post post) {
         return new PostDto(
@@ -27,8 +45,8 @@ public class PostDto {
                 post.getContent(),
                 post.getTitle(),
                 post.getPrice(),
-                post.getCategory(),
-                post.getCommentList().stream().map(x -> CommentDto.fromEntity(x)).toList()
+                post.getCommentList().stream().map(x -> CommentDto.fromEntity(x)).toList(),
+                post.getImages().stream().map(image->image.getImage()).collect(Collectors.toList())
         );
     }
 
@@ -38,7 +56,6 @@ public class PostDto {
         post.setContent(dto.getContent());
         post.setTitle(dto.getTitle());
         post.setPrice(dto.getPrice());
-        post.setCategory(dto.getCategory());
         return post;
     }
 
